--- a/SocialNetwork/Views/Publication/SavePublication.cshtml
+++ b/SocialNetwork/Views/Publication/SavePublication.cshtml
@@ -3,11 +3,9 @@
 @using SocialNetwork.Core.Application.ViewModels.Publications
 @using SocialNetwork.Core.Application.ViewModels.Users
 @inject IHttpContextAccessor httpContextAccessor
-@{
-    UserViewModel user = httpContextAccessor.HttpContext.Session.Get<UserViewModel>("user");
-}
 @model SavePublicationViewModel
 @{
+    UserViewModel user = httpContextAccessor.HttpContext.Session.Get<UserViewModel>("user");
     ViewData["Title"] = "Editando publicación";
 }
 
@@ -19,7 +17,7 @@
     </div>
     <div class="row mt-3 mb-3">
         <div class="col-6 offset-3">
-            <div class="card shadow-sm p-2">
+            <div class="card shadow-sm p-3">
                 <div class="d-flex flex-row m-1 height-28 mb-3">
                     <div class="m-1">
                         <img src="@user.ProfilePhotoUrl" width="25" height="25">
@@ -28,21 +26,22 @@
                         <p><b>@user.FirstName @user.LastName</b></p>
                     </div>
                 </div>
-                <form method="post" asp-controller="Publication" asp-action="Edit">
+                <form method="post" enctype="multipart/form-data" asp-controller="Publication" asp-action="Edit">
                     <div class="d-flex flex-column">
                         @if (Model.ImageUrl == null)
                         {
                             <textarea id="publicationContext" asp-for="Content" placeholder="¿Qué piensas?" class="p-2 mt-2 mb-2 form-control" rows="3" cols="50">@Model.Content</textarea>
+                            <button id="btn-post" type="submit" class="btn btn-primary mt-2">Actualizar</button>
                         }
                         else
                         {
-                            <input class="form-control" asp-for="File" required />
+                            <input class="form-control mt-4 mb-4" asp-for="File" required />
+                            <button type="submit" class="btn btn-primary mt-2">Actualizar</button>
                         }
-
-                        <button type="submit" class="btn btn-primary mt-2">Guardar</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </div>
+<script src="~/js/home.js"></script>
