--- a/SocialNetwork/Views/Publication/SavePublication.cshtml
+++ b/SocialNetwork/Views/Publication/SavePublication.cshtml
@@ -52,4 +52,4 @@
         </div>
     </div>
 </div>
-<script src="~/js/home.js"></script>
+<script src="~/js/home.js" asp-append-version="true"></script>
